# telegram_client

./: .gitignore  readme.md
.github/workflows/: build-tdlib-cross.yml  build-telegram-bot-api-cross.yml  release_tdlib.yml  telegram-bot-api-android.yml  web.yaml
package/telegram_bot_api_flutter/: LICENSE  README.md  ffigen.yaml  pubspec.yaml
package/telegram_bot_api_flutter/android/: build.gradle  settings.gradle
package/telegram_bot_api_flutter/example/: README.md  pubspec.yaml
package/telegram_bot_api_flutter/example/lib/: main.dart
package/telegram_bot_api_flutter/ios/: telegram_bot_api_flutter.podspec
package/telegram_bot_api_flutter/lib/: telegram_bot_api_flutter.dart  telegram_bot_api_flutter_bindings_generated.dart
package/telegram_bot_api_flutter/linux/: CMakeLists.txt
package/telegram_bot_api_flutter/macos/: telegram_bot_api_flutter.podspec
package/telegram_bot_api_flutter/src/: CMakeLists.txt  telegram_bot_api_flutter.c
package/telegram_bot_api_flutter/windows/: CMakeLists.txt
package/telegram_client/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
package/telegram_client/example/: pubspec.yaml
package/telegram_client/lib/: telegram_client.dart
package/telegram_client_android/: README.md  pubspec.yaml
package/telegram_client_android/android/: build.gradle
package/telegram_client_flutter/: CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
package/telegram_client_flutter/android/: build.gradle  settings.gradle
package/telegram_client_flutter/example/: README.md  pubspec.yaml
package/telegram_client_flutter/ios/: telegram_client_flutter.podspec
package/telegram_client_flutter/lib/: telegram_client_flutter.dart
package/telegram_client_flutter/linux/: CMakeLists.txt
package/telegram_client_flutter/macos/: telegram_client_flutter.podspec
package/telegram_client_flutter/src/: CMakeLists.txt  telegram_client_flutter.c
package/telegram_client_flutter/windows/: CMakeLists.txt
package/telegram_client_ios/: README.md
package/telegram_client_linux/: pubspec.yaml
package/telegram_client_macos/: README.md
package/telegram_client_windows/: pubspec.yaml
web/: pubspec.yaml
web/.github/workflows/: beta_compile.yaml
web/ios/Runner/: Info.plist
web/ios/Runner.xcodeproj/: project.pbxproj
web/lib/: main.dart
web/web/: index.html
(+164 files in other folders)
